@@ -840,7 +840,7 @@
 #define PACKAGE_NAME "GLoBES"
 
 /* Define to the full name and version of this package. */
-#define PACKAGE_STRING "GLoBES 3.1.9"
+#define PACKAGE_STRING "GLoBES 3.1.10"
 
 /* Define to the one symbol short name of this package. */
 #define PACKAGE_TARNAME "globes"
@@ -849,7 +849,7 @@
 #define PACKAGE_URL ""
 
 /* Define to the version of this package. */
-#define PACKAGE_VERSION "3.1.9"
+#define PACKAGE_VERSION "3.1.10"
 
 /* Define to l, ll, u, ul, ull, etc., as suitable for constants of type
    'ptrdiff_t'. */
@@ -898,7 +898,7 @@
 #define STDC_HEADERS 1
 
 /* Version number of package */
-#define VERSION "3.1.9"
+#define VERSION "3.1.10"
 
 /* Define to l, ll, u, ul, ull, etc., as suitable for constants of type
    'wchar_t'. */
