@@ -210,3 +210,7 @@
 
 ********** This version tagged 3.1.9 ************
 
+20 Nov 2010 JK
+        - Removed all code related to simulated annealing
+        - Default minimizer is now GLB_POWELL
+
